# flowforge

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py
api/app/: celery_client.py  main.py
api/app/api/: nodes.py  runs.py  webhooks.py  workflows.py
api/app/core/: config.py
api/app/db/: session.py
api/app/fixtures/: workflows.py
api/app/models/: __init__.py  run.py  workflow.py
api/app/schemas/: workflow.py
api/app/services/: security.py  workflow.py
api/app/services/nodes/: __init__.py  base.py  delay.py  filter_node.py  http_request.py  hubspot_create_contact.py  hubspot_update_deal.py  openai_chat.py  salesforce_create_lead.py  schedule_trigger.py  slack_send_message.py  transform.py  webhook_trigger.py
api/tests/: test_graph.py  test_nodes.py
web/: index.html  package.json  tailwind.config.js
web/src/: App.tsx  main.tsx
web/src/components/: NodeInspector.tsx  NodePalette.tsx  RunTimeline.tsx  Toast.tsx  WorkflowCanvas.tsx
web/src/lib/: api.ts  nodeCatalog.ts
web/src/pages/: Dashboard.tsx  Editor.tsx  RunDetail.tsx  Runs.tsx
web/src/store/: workflow.ts
web/src/styles/: index.css
worker/: Dockerfile  celery_app.py  requirements.txt  tasks.py
